Ensure proper event targetting when popup windows are open, fixes autoscroll cancelling. b=385034 r=smichaud sr=roc